--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Mykyta Baliesnyi <nikita.balesny@gmail.com>"]
 readme = "README.md"
-packages = [{include = "deepspeed_llama."}]
+packages = [{include = "deepspeed_llama"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -15,6 +15,7 @@ torch = "2"
 wandb = "^0.14.2"
 debugpy = "^1.6.7"
 poetry = "^1.4.2"
+sentencepiece = "^0.1.98"
 
 
 [build-system]
